# advent-of-code-rust

./: .gitignore  Cargo.toml
input/: 12.txt  24.txt
src/: lib.rs  maze.rs
